<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world! Welcome!</string>
    <string name="start_button">Start Match</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="winneLbl">The winner is </string>
    <string name="pauseTimmer">Pause</string>
    <string name="resumeTimmer">Resume</string>
    <string name="winnerA">The winner is team A</string>
    <string name="winnerB">The winner is Team B</string>
    <string name="noWinner">Its a Tie!!!</string>
    <string name="matchDurationLbl">Match Duration</string>
    <string name="teamANameHint">Name of Team A</string>
    <string name="teamBNameHint">Name of Team B</string>
    <string name="match_duration">Match Duration</string>
    <string name="cero_lbl">0</string>
    <string name="title_match_list">Matches</string>
    <string name="title_match_detail">Match Detail</string>
    <string name="new_match">New Match</string>
    <string name="vs">VS.</string>
    <string name="title_activity_match_list">MatchList</string>

</resources>
