<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcomeRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/start_button" />

    <TextView
        android:id="@+id/winnerLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/winneLbl"
        android:textColor="#146f16"
        android:textSize="30sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/teamABtn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="25dp"
        android:text="@string/teamA" />

    <Button
        android:id="@+id/teamBBtn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/teamABtn"
        android:layout_below="@+id/matchTimmer"
        android:layout_marginTop="39dp"
        android:text="@string/teamB" />

    <TextView
        android:id="@+id/scoreALbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/teamABtn"
        android:layout_alignBottom="@+id/teamABtn"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/teamABtn"
        android:textSize="45sp"
        android:text="00" />

    <TextView
        android:id="@+id/scoreBLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/teamBBtn"
        android:layout_alignBottom="@+id/teamBBtn"
        android:layout_alignLeft="@+id/scoreALbl"
        android:text="00"
        android:textSize="45sp" />

    <Button
        android:id="@+id/pauseTimmerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/teamBBtn"
        android:layout_below="@+id/teamABtn"
        android:layout_marginTop="53dp"
        android:clickable="false"
        android:text="@string/pauseTimmer" />

    <Chronometer
        android:id="@+id/matchTimmer"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/pauseTimmerBtn"
        android:layout_toRightOf="@+id/pauseTimmerBtn"
        android:gravity="center"
        android:textSize="45sp" />


</RelativeLayout>
